ListUsers y algún retoque en estructura del proyecto y pojos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,8 @@
         <activity
                 android:name="com.example.proyectodam_final.delete.DeletePrecio"
         />
+        <activity android:name="com.example.proyectodam_final.list.ListUsers"
+            />
     </application>
 
 </manifest>
