--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -12,8 +11,7 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/Theme.ProyectoDAM_FINAL"
-            android:usesCleartextTraffic="true"
-            tools:targetApi="31">
+            android:usesCleartextTraffic="true">
         <activity
                 android:name=".DeleteGestion"
                 android:exported="false"/>
@@ -52,20 +50,6 @@
                 android:name=".ListGestion"
                 android:exported="false"/>
         <activity
-                android:name=".list.ListBooking"
-                android:exported="false">
-            <meta-data
-                    android:name="android.app.lib_name"
-                    android:value=""/>
-        </activity>
-        <activity
-                android:name=".list.ListTournament"
-                android:exported="false">
-            <meta-data
-                    android:name="android.app.lib_name"
-                    android:value=""/>
-        </activity>
-        <activity
                 android:name=".MainActivity"
                 android:exported="true">
             <intent-filter>
@@ -88,6 +72,12 @@
                 android:name="com.example.proyectodam_final.delete.DeletePrecio"
         />
         <activity android:name="com.example.proyectodam_final.list.ListUsers"
+            />
+        <activity android:name="com.example.proyectodam_final.list.ListTournament"
+            />
+        <activity android:name="com.example.proyectodam_final.list.ListBooking"
+            />
+        <activity android:name="com.example.proyectodam_final.list.ListPrecios"
             />
     </application>
 
